--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "scripts": {
     "test": "npm test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://joeddo@bitbucket.org/ddict/locale.git"
-  },
+  "repository": "ddict/locale",
   "author": "ddo <joeddo89@gmail.com> (http://ddo.me/)"
 }
